# python-ollama

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/pyOllama/: pyOllama.py
