[metadata]
name = python-ollama
version = 0.0.1
author = Linus
author_email = element.oxygen@gmail.com
description = Small wrapper for ollama
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WildDogOne/python-ollama
project_urls =
    Bug Tracker = https://github.com/WildDogOne/python-ollama/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src